--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,14 +30,15 @@
 }
 
 .section-icon {
-    width: 35px; 
-    height: 35px; 
+    width: 24px; 
+    height: 24px; 
     fill: white; /* Sets the color of the SVG */
+    margin-top: 5px;
 }
 
 .section h3 {
     font-weight: bold;
-    margin: 5px 0; 
+    margin: 20px 0px;
 }
 
 .section p {
