Make blob elements unclickable

--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,10 @@ textarea, input {
   outline-offset: max(2px, 0.15rem);
 }
 
+.blob-image {
+  pointer-events: none;
+}
+
 
 /* ========== Perandory Font Faces ========== */
 @font-face {
