finished navbar with hamburger menu
-work out bug that occurs when you try to click on header when scroll slightly

--- a/src/Hamburger.css
+++ b/src/Hamburger.css
@@ -23,7 +23,8 @@
 .hamburger-overlay{
     top: 0;
     left: 0;
-    position: fixed;
-    height: 100%;
+    position: absolute;
+    height: 100vh;
     width: 100%;
+
 }
