--- a/src/Hamburger.css
+++ b/src/Hamburger.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    max-width: 100vw;
 }
 
 .hamburger-icon {
@@ -25,5 +26,6 @@
     left: 0;
     position: absolute;
     width: 100%;
+    max-width: 100vw;
 
 }
