--- a/src/Hamburger.css
+++ b/src/Hamburger.css
@@ -24,8 +24,7 @@
 .hamburger-overlay{
     top: 0;
     left: 0;
+    bottom: 0;
     position: absolute;
     width: 100%;
-    max-width: 100vw;
-
 }
